# pyddlvector

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: release-drafter.yml  stale.yml
docs/: ROBOT_CAPABILITY_MAP.md
examples/: connect_vector_t3x9.py  navmap_feed_http_stream.py  navmap_feed_to_png.py
src/pyddlvector/: __init__.py  activity.py  camera.py  client.py  config.py  exceptions.py  fleet.py  navmap.py  provisioning.py  settings.py  statistics.py  stimulation.py  telemetry.py  transport.py
src/pyddlvector/messaging/: __init__.py  alexa_pb2.py  behavior_pb2.py  cube_pb2.py  external_interface_pb2.py  external_interface_pb2_grpc.py  messages_pb2.py  settings_pb2.py  shared_pb2.py
tests/: test_activity.py  test_camera.py  test_client.py  test_config.py  test_fleet.py  test_navmap.py  test_navmap_stream.py  test_provisioning.py  test_settings.py  test_statistics.py  test_stimulation.py  test_telemetry.py
